--- a/package.json
+++ b/package.json
@@ -32,13 +32,16 @@
     "@types/react": "^17.0.3",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
+    "autoprefixer": "^10.2.5",
     "eslint": "^7.23.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.23.1",
     "husky": "^6.0.0",
     "lint-staged": "^10.5.4",
+    "postcss": "^8.2.9",
     "prettier": "^2.2.1",
+    "tailwindcss": "^2.1.1",
     "typescript": "^4.2.3"
   }
 }
