--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     ]
   },
   "dependencies": {
+    "@fontsource/material-icons": "^4.2.4",
+    "@fontsource/material-icons-rounded": "^4.2.4",
     "next": "^10.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
