--- a/package.json
+++ b/package.json
@@ -22,19 +22,28 @@
       "eslint --fix"
     ]
   },
+  "babelMacros": {
+    "twin": {
+      "preset": "styled-components"
+    }
+  },
   "dependencies": {
     "@fontsource/material-icons": "^4.2.4",
     "@fontsource/material-icons-rounded": "^4.2.4",
     "next": "^10.1.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "styled-components": "^5.2.3"
   },
   "devDependencies": {
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
+    "@types/styled-components": "^5.1.9",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
     "autoprefixer": "^10.2.5",
+    "babel-plugin-macros": "^3.0.1",
+    "babel-plugin-styled-components": "^1.12.0",
     "eslint": "^7.23.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
@@ -43,7 +52,9 @@
     "lint-staged": "^10.5.4",
     "postcss": "^8.2.9",
     "prettier": "^2.2.1",
+    "react-is": "^16.13.1",
     "tailwindcss": "^2.1.1",
+    "twin.macro": "^2.3.2",
     "typescript": "^4.2.3"
   }
 }
