--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
   "dependencies": {
     "@fontsource/material-icons": "^4.2.4",
     "@fontsource/material-icons-rounded": "^4.2.4",
+    "@ibm/plex": "^5.1.3",
+    "@tailwindcss/aspect-ratio": "^0.2.0",
+    "@tailwindcss/forms": "^0.3.2",
+    "@tailwindcss/line-clamp": "^0.2.0",
     "next": "^10.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
