--- a/package.json
+++ b/package.json
@@ -28,20 +28,27 @@
     }
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "dayjs": "^1.10.4",
+    "firebase": "^8.3.3",
+    "formik": "^2.2.6",
+    "next": "^10.1.2",
+    "numeral": "^2.0.6",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
+    "styled-components": "^5.2.3"
+  },
+  "devDependencies": {
     "@fontsource/material-icons": "^4.2.4",
     "@fontsource/material-icons-rounded": "^4.2.4",
     "@ibm/plex": "^5.1.3",
     "@tailwindcss/aspect-ratio": "^0.2.0",
     "@tailwindcss/forms": "^0.3.2",
     "@tailwindcss/line-clamp": "^0.2.0",
-    "next": "^10.1.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "styled-components": "^5.2.3"
-  },
-  "devDependencies": {
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
+    "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.9",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
