--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@tailwindcss/line-clamp": "^0.2.0",
     "@types/googlemaps": "^3.43.3",
     "@types/node": "^14.14.37",
+    "@types/numeral": "^2.0.1",
     "@types/react": "^17.0.3",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.9",
