--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "firebase": "^8.3.3",
     "formik": "^2.2.6",
     "next": "^10.1.2",
+    "nookies": "^2.5.2",
     "numeral": "^2.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
